--- a/app/src/assets/styles/index.css
+++ b/app/src/assets/styles/index.css
@@ -3,11 +3,24 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background-color: #04AA6D;
+  color: white; /* Text colour */
+  font-weight: bold;
+  padding: 1%;
+  border: none;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+button > a {
+  color: inherit;
+  /* Remove the underline from links within a button */
+  text-decoration: none;
 }
