Input form uses radio buttons and email subject changes with it

--- a/app/src/assets/styles/contact.css
+++ b/app/src/assets/styles/contact.css
@@ -12,7 +12,8 @@
     margin-left: 3%;
 }
 
-.contact-form  .form-control {
+.contact-form .input-area {
     width: 90%;
     margin: 1% 0 4% 3%; /* top right bottom left */
+    font-family: inherit;
 }
